force-app/main/default/objects/gmpkg__GanttElement__c/gmpkg__GanttElement__c.object-meta.xml
<CustomObject>
    <label>GanttElement</label>
    <nameField>
        <label>GanttElement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GanttElements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>