force-app/main/default/objects/gmpkg__GanttElement__c/fields/gmpkg__Checklist__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Checklist__c</fullName>
    <label>Checklist</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>