force-app/main/default/objects/gmpkg__GanttElement__c/fields/gmpkg__Id__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Id__c</fullName>
    <label>Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>