force-app/main/default/objects/gmpkg__GanttElement__c/fields/gmpkg__Parent__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>gmpkg__GanttElement__c</referenceTo>
    <relationshipLabel>GanttElements</relationshipLabel>
    <relationshipName>GanttElements</relationshipName>
    <type>Lookup</type>
</CustomField>