force-app/main/default/objects/gmpkg__GanttElement__c/fields/gmpkg__SObjectType__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__SObjectType__c</fullName>
    <label>SObjectType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>