force-app/main/default/objects/gmpkg__GanttElement__c/fields/gmpkg__Type__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>task</fullName>
                <default>true</default>
                <label>Task</label>
            </value>
            <value>
                <fullName>milestone</fullName>
                <label>Milestone</label>
            </value>
            <value>
                <fullName>summary</fullName>
                <label>Summary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>