force-app/main/default/objects/gmpkg__GanttElement__c/listViews/gmpkg__All.listView-meta.xml
<ListView>
    <fullName>gmpkg__All</fullName>
    <columns>NAME</columns>
    <columns>gmpkg__GanttId__c</columns>
    <columns>gmpkg__Parent__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>gmpkg__SObjectType__c</columns>
    <columns>gmpkg__Order__c</columns>
    <columns>gmpkg__Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>